trying to fix layout problem on mini dell computer browser

--- a/public/stylesheets/timesarrow.css
+++ b/public/stylesheets/timesarrow.css
@@ -71,7 +71,7 @@ div#doc
 
 div#header
 {
-	/*background: url(../images/banner.gif);*/
+	width: 99%;
 }
 
 
